@@ -2,6 +2,7 @@ siril-1.4.1
 --/--/--
 **Fixes**
 * Fixes build error when compiled without libgit2, libjpeg and libcurl (#1886, #1887, #1888, #1889)
+* Fix issue with the tkfilebrowser submodule if duplicate filenames or bookmarks are present (!964)
 
 siril-1.4.0
 12/05/25
